src/components/status.css
/* ... */
.status.large > .container > .meta {
  min-height: 50px;
}
.status > .container > .meta .arrow {
  color: var(--reply-to-color);
  vertical-align: middle;
}
.status > .container > .meta :is(.time, .edited) {
  color: var(--text-insignificant-color);
  text-align: end;
  text-decoration: none;
  flex-shrink: 0;
  margin-inline-start: 4px;
  white-space: nowrap;
}
.status > .container > .meta a.time {
  position: relative;
  overflow: visible;
  display: flex;
  align-items: center;
  gap: 2px;
  font-size: 90%;

  .more {
    margin-inline-start: 4px;
    transition: transform 0.2s ease-out;
  }
}
.status > .container > .meta a.time:is(:hover, :focus) {
  .more {
    transform: scale(1.2);
    color: var(--link-color);
  }
}
.status > .container > .meta a.time:active,
.status > .container > .meta a.time.is-open {
  text-decoration: none;
  opacity: 1;
}
.status > .container > .meta a.time:after {
  content: '';
  position: absolute;
  inset: -16px -16px -8px;
}
.status > .container > .meta .reply-to {
  opacity: 0.5;
  font-size: smaller;
}

.status-reply-badge {
  display: inline-flex;
  margin: 2px 0;
  margin-inline-start: 4px;
  gap: 4px;
  align-items: center;
  vertical-align: middle;
}
.status-reply-badge .icon {
  color: var(--reply-to-color);
}
.status-thread-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background: var(--bg-color);
  border: 1px solid var(--reply-to-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  background-image: repeating-linear-gradient(
    -70deg,
    transparent,
    transparent 3px,
    var(--reply-to-faded-color) 3px,
    var(--reply-to-faded-color) 4px
  );
  font-weight: bold;
  align-self: center;
  flex-shrink: 0;

  .meta-name + & {
    margin-inline-start: 4px;
    margin-block: 0;

    + .time {
      margin-inline-start: 0 !important;
    }
  }
}
.status-direct-badge {
  vertical-align: middle;
  display: inline-flex;
  margin: 2px 0;
  gap: 4px;
  align-items: center;
  color: var(--reply-to-text-color);
  background-color: var(--bg-color);
  border: 1px solid var(--reply-to-text-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  opacity: 0.75;
  font-weight: bold;
  box-shadow: inset 0 0 0 1px var(--reply-to-color);
}
.status-filtered-badge {
  flex-shrink: 0;
  color: var(--text-insignificant-color);
  /* background: var(--bg-faded-color); */
  /* border: var(--hairline-width) solid var(--bg-color); */
  border: var(--hairline-width) dashed var(--text-insignificant-color);
  border-radius: 4px;
  padding: 4px;
  font-size: 10px;
  line-height: 1;
  text-transform: uppercase;
  font-weight: bold;
  vertical-align: middle;
  display: inline-block;

  &.horizontal {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 100%;
  }
}
.status-filtered-badge:not(.horizontal).badge-meta {
  display: inline-flex;
  flex-direction: column;
  position: relative;
  top: calc((9px + 2px) / 2 * -1);
  min-width: 50px;
  max-width: 100px;
  text-align: center;
}
.status-filtered-badge.clickable:hover {
  cursor: pointer;
  color: var(--text-color);
  border-color: var(--text-color);
  background: var(--bg-color);
}
.status-filtered-badge:not(.horizontal).badge-meta > span:first-child {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.status-filtered-badge:not(.horizontal).badge-meta > span + span {
  display: block;
  font-size: 9px;
  font-weight: normal;
  text-transform: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  position: absolute;
  width: 100%;
  top: calc(100% + 2px);
  inset-inline-start: 0;
  text-align: center;
}
.status-filtered-badge.horizontal.badge-meta > span + span {
  font-weight: normal;
  text-transform: none;
}

.status.large > .container > .content-container {
  margin-inline-start: calc(-50px - 16px);
  padding-top: 10px;
  padding-bottom: 10px;
}

.status
  .content-container.has-spoiler
  :is(.spoiler-button, .spoiler-media-button):not([hidden]) {
  margin: 4px 0;
  font-size: 90%;
  border: 1px dashed var(--button-bg-color);
  display: flex;
  gap: 4px;
  align-items: center;
  text-align: start;
}
.status .content-container.has-spoiler:not(.show-spoiler) .spoiler-button {
  ~ *:not(
      .content.truncated,
      .media-container,
      .media-first-container,
      .card,
      .media-figure-multiple,
      .spoiler-media-button
    ),
  ~ .card .meta-container {
    opacity: 0.2;
    text-decoration-thickness: 1.5em;
    text-decoration-line: line-through;
    pointer-events: none;
    user-select: none;

    ruby {
      filter: contrast(0);
      background-color: #000;
    }
    * {
      text-decoration-color: inherit;
      text-decoration-thickness: 1.5em;
      text-decoration-line: line-through;
    }
  }

  ~ *:not(
      .media-container,
      .media-first-container,
      .card,
      .media-figure-multiple,
      .spoiler-media-button
    ),
  ~ .card .meta-container {
    img,
    video {
      filter: invert(0.5);
      background-color: black;
    }
  }

  ~ .content.truncated {
    opacity: 1;

    > * {
      opacity: 0.2;
      text-decoration-thickness: 1.5em;
      text-decoration-line: line-through;
      /* text-rendering: optimizeSpeed; */
      pointer-events: none;
      user-select: none;

      * {
        text-decoration-color: inherit;
        text-decoration-thickness: 1.5em;
        text-decoration-line: line-through;
        /* text-rendering: optimizeSpeed; */
      }
    }
  }

  /* ~ :is(.media-container, .media-figure-multiple) .media > *, */
  ~ .card .card-image > img {
    display: none;
    /* filter: blur(32px);
    opacity: 0;
    image-rendering: crisp-edges;
    image-rendering: pixelated;
    animation: none !important; */
  }
}
/* ... */

